2008-10-24 yusei
* Fixed EventModule_getEventDetailedReportSectionList. Since All messages will be translated in a template, no need to translate in this script.

2008-10-14 yusei
* Start to develop version 5.3.

2008-10-7 yusei
* Update some field titles for translation.

2008-10-1 yusei
* Added comment to Event_createRespondEvent.
* Changed label message on acknowledge action dialog.
* Changed action box name title of validate_action transition on sale_opportunity_workflow.
* Description field on Ticket_viewNewEventDialog is not required now.
* Assignee can see the new incoming event worklist.

2008-09-26 yusei
* Fixed unauthorized error bug if deleted events exists.

2008-9-25 yusei
* Update xml format.

2008-09-07 yusei
* Update English messages.

2008-09-04 yusei
* Update English messages.

2008-08-29 yusei
* Correct message text.

2008-08-28 yusei
* Use Base_translateString or translateString instead of N_ for translation message.

2008-07-17 jerome
Remove portal transforms, they are also in core

2008-07-17 nicolas
Get Forwarded data from attachments if required

2008-07-17 nicolas
Quote url_string parameter

2008-07-15 yo
* Preserve whitespace in the text content of an event.

2008-07-15 rafael
* Added Event_afterClone to make cloned Events editable.

2008-07-07 yusei
* Added an action to ticket portal types which clone ticket and related events.

2008-07-02 yusei
* when ingest email message, find sender from person document first and organisation later.

2008-06-27 yusei
* Start to develop version 5.2.

2008-06-26 yusei
* Revise version to 5.1.

2008-06-25 rafael
* Added Document Tabs at Tickets.

2008-06-10 yusei
* Move Event_send and mail templates to erp5_core.

2008-06-10 yusei
* Don't escape html markup in Event_viewMimeMessage.

2008-06-09 yusei
* Added Event_send proxy role (Manager).

2008-06-06 yusei
* In Event_send, invoke transition only when portal type is available (it means crm portal types are installed).

2008-06-04